# battronics_django

./: .gitignore  README.md  config.json  customexceptions.py  environment.yml  manage.py  pyproject.toml  queue_settings.py
ABD_Webapp/: asgi.py  settings.py  urls.py  wsgi.py
abd_api_auth/: apps.py
abd_api_database/: apps.py  serializers.py  urls.py  views.py
abd_api_management/: apps.py  serializers.py  urls.py  views.py
abd_database/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  signals.py  urls.py  views.py  views_api.py  views_export.py
abd_database/fixtures/: data.json  dummy-entries.json
abd_database/helpers/: basicHelper.py  db.py  modelHelper.py  upload.py
abd_database/migrations/: 0001_initial.py  0002_battery_file_hdf5file_file_name_and_more.py  0003_dataset_description.py  0004_remove_uploadbatch_is_deleted_hdf5file_error_details_and_more.py  0005_uploadfile_remove_battery_file_remove_battery_name_and_more.py  0006_alter_uploadbatch_dataset.py  0007_battery_name_battery_prod_year_and_more.py  0008_alter_battery_name.py  0010_auto_20230815_1357.py  (+6 more)
abd_frontend/: package-lock.json  package.json
abd_management/: admin.py  apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
abd_predictions/: admin.py  apps.py  models.py  urls.py  views.py
doc/: databaseDesign.md  fileupload.md  gitWorkflow.md  permissions.md  rest_api.md  server_installation.md  setup.md  upload_queue.md
jobqueue_manager/: apps.py  manager.py  manager_helper.py  test.py
predictions physical/: DiffAnalysis.py
templates/: base.html
(+63 files in other folders)
